infrastructure/kyverno-policies/01-pod-security.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: pod-security-nonroot-no-privileged
spec:
  validationActions: [Deny]
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
            - longhorn-system
            - falco
            - topolvm-system
            - gitlab-system
            - metallb-system
            - argocd
            - kyverno
            - longhorn-system
  validations:
    - expression: >
        object.spec.containers.all(c,
          has(c.securityContext) &&
          c.securityContext.runAsNonRoot == true
        )
      message: "Container bắt buộc phải chạy non-root."

    - expression: >
        object.spec.containers.all(c,
          !has(c.securityContext.privileged) ||
          c.securityContext.privileged == false
        )
      message: "Không cho phép chạy privileged mode."
