infrastructure/kyverno-policies/04-disallow-latest.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-image-latest
spec:
  validationActions: [Audit]
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]

  validations:
    - expression: >
        object.spec.containers.all(c,
          c.image.contains(":") &&
          !c.image.matches(".*:latest$")
        )
      message: "Không được dùng image tag latest hoặc image không tag."
