infrastructure/kyverno-policies/09-auto-imagepullsecrets.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-imagepullsecrets
spec:
  rules:
    - name: add-regcred
      match:
        resources:
          kinds: ["Pod"]
      exclude:
        resources:
          namespaces: ["kube-system", "kyverno", "argocd"]
      mutate:
        patchStrategicMerge:
          spec:
            imagePullSecrets:
              - name: regcred # Đảm bảo bạn đã tạo secret này trong namespace
