infrastructure/kyverno-policies/20-cpol-verify-firewall.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-firewall-service-signature
spec:
  validationFailureAction: Audit
  background: false
  rules:
    - name: verify-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - imageReferences:
            - "index.docker.io/d4vlin/firewall-service@sha256:*"
          attestors:
            - entries:
                - keys:
                    publicKeys: |
                      -----BEGIN PUBLIC KEY-----
                      MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAERgxeNxC6iuA3A7NIgrSeokEkX/eY
[...]
                      -----END PUBLIC KEY-----
          mutateDigest: false
